added creating project and displaying it

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Hopebridge</string>
+    <string name="spinner_prompt">Please Select</string>
 </resources>
+
